[package]
name        = "scry-server"
version     = "0.0.1"
edition.workspace = true
license.workspace = true
description = "scry ingest server: TCP listener, handshake, batch dispatch. Owns the per-writer DummyPipeline (WAL + parquet builder + optional catalog) shared across sessions. Designed to be composed into the eventual single scry binary alongside storage and query."

[dependencies]
anyhow            = { workspace = true }
arrow             = { workspace = true }
arrow-ipc         = "58"
async-trait       = { workspace = true }
binschema-runtime = { workspace = true }
bytes             = { workspace = true }
datafusion        = { workspace = true }
futures           = { workspace = true }
object_store      = { workspace = true }
scry-block        = { workspace = true }
scry-catalog      = { workspace = true }
scry-objstore     = { workspace = true }
scry-proto        = { workspace = true }
scry-query        = { workspace = true }
scry-wal          = { workspace = true }
tokio             = { workspace = true }
tracing           = { workspace = true }
uuid              = { workspace = true }
zstd              = { workspace = true }

[dev-dependencies]
arrow         = { workspace = true }
arrow-ipc     = "58"
futures       = { workspace = true }
object_store  = { workspace = true }
scry-block    = { workspace = true }
scry-proto    = { workspace = true }
scry-query    = { workspace = true }
tempfile      = "3"
uuid          = { workspace = true }

[lints]
workspace = true
