[package]
name        = "scry-valkey"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "v0.9 Valkey transport for scry's multi-instance coordination: lease (SET NX PX + Lua), block-event pub/sub, and a health watch. Implements scry-cluster's LeaseProvider and scry-block's BlockEventSink."

[lib]
name = "scry_valkey"
path = "src/lib.rs"

[dependencies]
anyhow       = { workspace = true }
fred         = { workspace = true, features = ["subscriber-client", "i-scripts"] }
scry-block   = { workspace = true }
scry-cluster = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }

[dev-dependencies]
scry-catalog = { workspace = true }

[lints]
workspace = true
